Version 0.9.1
=============

Released January 14, 2018

- Added tests for Irish calendar
- minor fixes and refactoring


Version 0.9
===========

Released January 14, 2018 (PR merging by dr-prodigy)

- Add support for Python 3.6 (dr-prodigy)
- Add Italian holidays (dr-prodigy)
- Add Slovenian holidays (Cvetk0)
- Add South African holidays (nickyspag)
- Add Belgium holidays (fb22)
- Add French holidays (oiffrig)
- Add Japanese holidays (kokinomura)
- Add Polish holidays (tadeoos)
- Add Swedish holidays (johanpalmqvist)
- Add AU/Queensland The Ekka Show (kirpit)
- Various fixes


Version 0.8.1
=============

Released February 12, 2017

- Add Norwegian holidays


Version 0.8
===========

Released February 2, 2017

- Improve United Kingdom holidays
- Add England, Wales, Scotland
- Add Northern Ireland, Isle of Man
- Add Republic of Ireland
- Fix Liberation Day (NL)


Version 0.7
===========

Released January 12, 2017

- Add holidays, extended holidays and tests for Portugal
- Add holidays and tests for the Netherlands
- Specify encoding when parsing for version in setup.py
  allowing package to be installed in non-unicode locales


Version 0.6
===========

Released November 18, 2016

- Rename project from holidays.py to python-holidays
- PyPI location `holidays` remains the same
- Add Czech holidays
- Add UK special holidays
- Add ECB TARGET bank holidays
- Add changes to Georgia state holiday names for 2016
- Fixes to Canadian holidays


Version 0.5
===========

Released September 5, 2016

- Add support for Python 3.5
- Add holidays and tests for Columbia, Denmark, Spain, United Kingdom
- Fix Martin Luther King, Jr. Day in state of Georgia
- Fix setup.py install error with non-standard sys default encoding


Version 0.4.1
=============

Released January 5, 2016

- Add federal and provincial holidays for Germany
- Add federal holidays for Austria


Version 0.4
===========

Released October 4, 2015

- Add `append` and `get_list` methods to Holiday objects